--- a/src/App.form
+++ b/src/App.form
@@ -258,4 +258,12 @@
       </grid>
     </children>
   </grid>
+  <buttonGroups>
+    <group name="buttonGroup1">
+      <member id="52efa"/>
+      <member id="52efa"/>
+      <member id="3cff8"/>
+      <member id="84794"/>
+    </group>
+  </buttonGroups>
 </form>
